--- a/index.html
+++ b/index.html
@@ -60,47 +60,47 @@ body {
 
 .slide:nth-child(4) {
   background: url("4.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(5) {
   background: url("5.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(6) {
   background: url("6.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(7) {
   background: url("7.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(8) {
   background: url("8.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(9) {
   background: url("9.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(10) {
   background: url("10.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(11) {
   background: url("11.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 .slide:nth-child(12) {
   background: url("12.jpg") no-repeat
-    center top/cover;
+    center top/contain;
 }
 
 
