--- a/index.html
+++ b/index.html
@@ -62,30 +62,30 @@ body {
   background: url("4.jpg") no-repeat
     center top/contain;
 }
-<div style="text-align:center;">
+
 .slide:nth-child(5) {
   background: url("5.jpg") no-repeat
-    center/contain;
+    vertical-align: middle;/contain;
 }
-<div style="text-align:center;">
+
 .slide:nth-child(6) {
   background: url("6.jpg") no-repeat
-    center/contain;
+    vertical-align: middle;/contain;
 }
-<div style="text-align:center;">
+
 .slide:nth-child(7) {
   background: url("7.jpg") no-repeat
-    center/contain;
+    vertical-align: middle;/contain;
 }
-<div style="text-align:center;">
+
 .slide:nth-child(8) {
   background: url("8.jpg") no-repeat
-    center/contain;
+    vertical-align: middle;/contain;
 }
-<div style="text-align:center;">
+
 .slide:nth-child(9) {
   background: url("9.jpg") no-repeat
-    center/contain;
+    vertical-align: middle;/contain;
 }
 
 .slide:nth-child(10) {
