--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@ body {
 
 .slide:nth-child(5) {
   background: url("5.jpg") no-repeat
-    vertical-align: middle;/contain;
+    vertical-align: middle/contain;
 }
 
 .slide:nth-child(6) {
   background: url("6.jpg") no-repeat
-    vertical-align: middle;/contain;
+    vertical-align: middle/contain;
 }
 
 .slide:nth-child(7) {
   background: url("7.jpg") no-repeat
-    vertical-align: middle;/contain;
+    vertical-align: middle/contain;
 }
 
 .slide:nth-child(8) {
   background: url("8.jpg") no-repeat
-    vertical-align: middle;/contain;
+    vertical-align: middle/contain;
 }
 
 .slide:nth-child(9) {
   background: url("9.jpg") no-repeat
-    vertical-align: middle;/contain;
+    vertical-align: middle/contain;
 }
 
 .slide:nth-child(10) {
